# chatglm3

./: README.md  chatglm.ipynb  pyproject.toml
chatglm3/: __init__.py  chatglm.py
chatglm3/output_parsers/: json.py
